changed the readme.md file